--- a/src/assets/sass/sequencer.scss
+++ b/src/assets/sass/sequencer.scss
@@ -1,6 +1,6 @@
 table {
   position: absolute;
-  bottom: 5.1rem;
+  bottom: 4rem;
   width: 100%;
 }
 
@@ -15,17 +15,14 @@ table {
 }
 
 .note.header {
-  font-family: 'Knewave', cursive;
+  font-family: 'Rubik', sans-serif;
   width: 2.5rem;
+  text-transform: uppercase;
 }
 
 .note.off { background-color: #D9D9D9; }
 
-tr:nth-child(1n) .note.header { background-color: #238DEF; color: #1D6FBB; }
-tr:nth-child(1n) .note.on { background-color: #50ABFF; border: 3px solid #238DEF; }
+tr .note.header { background-color: $white; color: lighten($black, 80%); }
+tr .note.on { background-color: $primary; border: 3px solid darken($primary, 5%); }
 
-tr:nth-child(2n) .note.header { background-color: #FF7B51; color: #D66542; }
-tr:nth-child(2n) .note.on { background-color: #F59057; border: 3px solid #FF7B51; }
-
-tr:nth-child(3n) .note.header { background-color: #EFE723; color: #BCB61F; }
-tr:nth-child(3n) .note.on { background-color: #FBFF3D; border: 3px solid #EFE723; }
+tr:nth-child(2n) .note.header { background-color: $black; color: darken($white, 80%); }
