--- a/src/assets/sass/sequencer.scss
+++ b/src/assets/sass/sequencer.scss
@@ -23,6 +23,6 @@ table {
 .note.off { background-color: #D9D9D9; }
 
 tr .note.header { background-color: $white; color: lighten($black, 80%); }
-tr .note.on { background-color: $primary; border: 3px solid darken($primary, 5%); }
+tr .note.on { background-color: $primary; }
 
 tr:nth-child(2n) .note.header { background-color: $black; color: darken($white, 80%); }
