--- a/src/assets/sass/sequencer.scss
+++ b/src/assets/sass/sequencer.scss
@@ -11,7 +11,7 @@ table {
   box-sizing: border-box;
 
   width: 2.5rem;
-  height: 3rem;
+  height: 1rem;
 }
 
 .note.header {
@@ -22,7 +22,7 @@ table {
 
 .note.off { background-color: #D9D9D9; }
 
-tr .note.header.white { background-color: $white; color: lighten($black, 80%); }
+tr .note.header.white { background-color: $white; color: $black; }
 tr .note.on { background-color: $primary; }
 
-tr .note.header.black { background-color: $black; color: darken($white, 80%); }
+tr .note.header.black { background-color: $black; color: $white; }
