--- a/src/assets/sass/sequencer.scss
+++ b/src/assets/sass/sequencer.scss
@@ -1,12 +1,19 @@
 table {
+  display: none;
   position: absolute;
   top: 12.15rem;
   width: 100%;
   cursor: url(/images/edit.png) -30 30, pointer;
+  z-index: 0;
+
+  &.active {
+    z-index: 1;
+  }
 }
 
-.active { display: block; }
-.inactive { display: none; }
+body.edit-mode table {
+  display: table;
+}
 
 .note {
   box-sizing: border-box;
@@ -21,9 +28,27 @@ table {
   text-transform: uppercase;
 }
 
-.note.off { background-color: #D9D9D9; }
+.note.off,.note.on {
+  background-color: #D9D9D9;
+}
 
 tr .note.header.white { background-color: $white; color: $black; }
 tr .note.on { background-color: $primary; }
 
 tr .note.header.black { background-color: $black; color: $white; }
+
+table:nth-child(1n) {
+  tr .note.on { background-color: $red; }
+}
+
+table:nth-child(2n) {
+  tr .note.on { background-color: $blue; }
+}
+
+table:nth-child(3n) {
+  tr .note.on { background-color: $green; }
+}
+
+table:nth-child(4n) {
+  tr .note.on { background-color: $orange; }
+}
