--- a/src/assets/style/sequencer.scss
+++ b/src/assets/style/sequencer.scss
@@ -1,9 +1,10 @@
 table {
   display: none;
   position: absolute;
-  top: 12.15rem;
+  top: 12rem;
   width: 100%;
   cursor: url(/images/edit.png) -30 30, pointer;
+  border-collapse: collapse;
   z-index: 0;
 
   &.active {
@@ -16,6 +17,9 @@ body.edit-mode table {
 }
 
 .note {
+  border: 0.1rem solid white;
+  border-top: none;
+  border-left: none;
   box-sizing: border-box;
 
   width: 2.5rem;
